home/apps/networking/traefik/routers/default/deluge.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: deluge
    namespace: default
    annotations:
        gethomepage.dev/href: https://deluge.d90.name
        gethomepage.dev/enabled: "true"
        gethomepage.dev/description: deluge
        gethomepage.dev/group: Downloads
        gethomepage.dev/icon: deluge.png
        gethomepage.dev/name: deluge  
spec:
    entryPoints:
        - websecure
    routes:
        - match: Host(`deluge.d90.name`)
          kind: Rule
          services:
            - name: deluge
              kind: Service
              port: 8112
    tls:
        secretName: tls.deluge
