home/apps/networking/traefik/routers/default/ext-adguard.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard
  namespace: default
spec:
  ports:
    - port: 80
      targetPort: 80
  clusterIP: None
---
apiVersion: v1
kind: Endpoints
metadata:
  name: adguard
  namespace: default
subsets:
  - addresses:
      - ip: 10.10.10.231
    ports:
      - port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: adguard
  namespace: default
  annotations:
    gethomepage.dev/href: "https://adguard.d90.name"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Network
    gethomepage.dev/icon: adguard-home
    gethomepage.dev/name: adguard

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`adguard.d90.name`)
      kind: Rule
      services:
        - name: adguard
          port: 80
  tls:
    secretName: tls.adguard
