home/apps/networking/traefik/routers/default/ext-emby.yaml
apiVersion: v1
kind: Service
metadata:
  name: emby
  namespace: default
spec:
  ports:
    - port: 8096
      targetPort: 8096
  clusterIP: None
---
apiVersion: v1
kind: Endpoints
metadata:
  name: emby
  namespace: default
subsets:
  - addresses:
      - ip: 10.10.10.210
    ports:
      - port: 8096
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: emby
  namespace: default
  annotations:
    gethomepage.dev/href: "https://emby.d90.name"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Streaming
    gethomepage.dev/icon: sh-emby
    gethomepage.dev/name: emby
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`emby.d90.name`)
      kind: Rule
      services:
        - name: emby
          port: 8096
  tls:
    secretName: tls.emby
