home/apps/networking/traefik/routers/default/ext-qnap.yaml
apiVersion: v1
kind: Service
metadata:
  name: qnap
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: https  # <--- ADD THIS
spec:
  ports:
    - name: https # It is good practice to name this 'https' as well
      port: 443
      targetPort: 443
  clusterIP: None
---
apiVersion: v1
kind: Endpoints
metadata:
  name: qnap
  namespace: default
subsets:
  - addresses:
      - ip: 10.10.10.210
    ports:
      - name: https
        port: 443
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qnap
  namespace: default
  annotations:
    gethomepage.dev/href: "https://nas.d90.name"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Network
    gethomepage.dev/icon: sh-qnap
    gethomepage.dev/name: QNAP Nas
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nas.d90.name`)
      kind: Rule
      services:
      - name: qnap
        port: 443
  tls:
    secretName: tls.qnap
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qnap-cert-sync
  namespace: default
  annotations:
    # This tells Reloader to watch any ConfigMap or Secret mounted in this deployment
    reloader.stakater.com/auto: "true"
  labels:
    app: qnap-cert-sync
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qnap-cert-sync
  template:
    metadata:
      labels:
        app: qnap-cert-sync
    spec:
      containers:
      - name: syncer
        image: alpine:latest
        command: ["/bin/sh", "-c"]
        args:
          - |
            [...]
        volumeMounts:
        - name: cert-volume
          mountPath: "/etc/certs"
          readOnly: true
        - name: ssh-volume
          mountPath: "/etc/ssh-key"
          readOnly: true
      volumes:
      - name: cert-volume
        secret:
          secretName: tls.qnap # Reloader watches this
      - name: ssh-volume
        secret:
          secretName: qnap-ssh-key
