home/apps/networking/traefik/routers/default/homepage.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`homepage.d90.name`)
    kind: Rule
    services:
    - name: homepage
      kind: Service
      port: 10352
      sticky:
        cookie:
          httpOnly: true
          secure: true
          sameSite: none
  tls:
    secretName: tls.homepage
