home/apps/networking/traefik/routers/default/lidarr.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lidarr
  namespace: default
  annotations:
    gethomepage.dev/href: "https://lidarr.d90.name"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: lidarr
    gethomepage.dev/group: Media Stack
    gethomepage.dev/icon: lidarr.png
    gethomepage.dev/name: lidarr
    gethomepage.dev/widget.type: "lidarr"
    gethomepage.dev/widget.url: "http://lidarr:8686"
    gethomepage.dev/widget.key: "1f3fe15d59f74173ba50c2367ec34918"
    gethomepage.dev/pod-selector: ""
    gethomepage.dev/weight: 10 # optional
    # # gethomepage.dev/instance: "public" # optional
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`lidarr.d90.name`)
    kind: Rule
    services:
    - name: lidarr
      kind: Service
      port: 8686
  tls:
    secretName: tls.lidarr
