home/apps/networking/traefik/routers/default/tasmo.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tasmoadmin
  namespace: default
  annotations:
    gethomepage.dev/href: "https://tasmo.d90.name"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: tasmoadmin
    gethomepage.dev/group: Network
    gethomepage.dev/icon: sh-tasmoadmin
    gethomepage.dev/name: tasmoadmin
    # gethomepage.dev/widget.type: "tasmoadmin"
    # gethomepage.dev/widget.url: "http://tasmoadmin:80"
    # gethomepage.dev/widget.key: "07359a9ee168bc3c8ec6bef9e53db6b4"
    # gethomepage.dev/pod-selector: ""
    # gethomepage.dev/weight: 10 # optional
    # # gethomepage.dev/instance: "public" # optional
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`tasmo.d90.name`)
    kind: Rule
    services:
    - name: tasmoadmin
      kind: Service
      port: 80
  tls:
    secretName: tls.tasmo
