home/apps/networking/traefik/routers/default/webnettools.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: &app webnettools
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`wnt.d90.name`)
    kind: Rule
    services:
    - name: *app
      kind: Service
      port: 8080
  tls:
    secretName: tls.webnettools
